# pulse-project

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md
.github/workflows/: ci.yml
.upsun/: config.yaml
apps/api/: .environment  conftest.py  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 1abf75f50b75_initial_schema.py  ea5a329d5f07_add_closed_at_to_issues.py
apps/api/src/pulse/: main.py  models.py  openapi.py  worker.py
apps/api/src/pulse/features/_template/: README.md  router.py  schemas.py  service.py  test_thing.py.tmpl
apps/api/src/pulse/features/dashboard/: jobs.py  router.py  schemas.py  service.py  test_dashboard.py  test_jobs.py
apps/api/src/pulse/features/issues/: jobs.py  router.py  schemas.py  service.py  test_issues.py  test_jobs.py
apps/api/src/pulse/features/labels/: router.py  schemas.py  service.py  test_labels.py
apps/api/src/pulse/features/projects/: router.py  schemas.py  service.py  test_projects.py
apps/api/src/pulse/jobs/: enqueue_rollup.py
apps/api/src/pulse/lib/: db.py  errors.py  settings.py
apps/api/tests/: test_health.py  test_replica_settings.py
apps/web/: eslint.config.js  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
apps/web/src/: App.test.tsx  App.tsx  main.tsx
apps/web/src/lib/: api-types.gen.ts  api.ts
apps/web/src/pages/: HomePage.tsx  ProjectDetailPage.test.tsx  ProjectDetailPage.tsx  ProjectsPage.test.tsx  ProjectsPage.tsx
docs/: autoscaling-test.md  backlog.md  preview-smoke-test.md
scripts/: db_burn.py  loadtest.py
