[project]
name = "pulse-api"
version = "0.1.0"
description = "Pulse API — task tracker backend (FastAPI + SQLModel)"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlmodel>=0.0.22",
    "psycopg[binary]>=3.2",
    "alembic>=1.13",
    "pydantic-settings>=2.4",
    "redis>=5.0",
    "arq>=0.26",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "httpx>=0.27",
    "ruff>=0.6",
    "pyright>=1.1.380",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pulse"]

[tool.pytest.ini_options]
testpaths = ["src/pulse/features", "tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
src = ["src"]
extend-exclude = ["alembic/versions"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pyright]
include = ["src", "tests"]
typeCheckingMode = "standard"
venvPath = "."
venv = ".venv"
